--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/storage": "^14.11.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.0",
     "expo-app-auth": "~11.0.3",
+    "expo-cli": "^5.4.7",
     "expo-google-app-auth": "~9.0.0",
     "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
