--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-native": "0.64.2",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-deck-swiper": "^2.0.5",
+    "react-native-image-picker": "^4.8.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
+    "react-native-switch-selector": "^2.2.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "tailwind-rn": "^3.0.1"
