--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "tinder-2-rn",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/D.png",
     "plugins": [
       [
         "expo-image-picker",
@@ -14,7 +14,7 @@
       ]
     ],
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/S.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -37,7 +37,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/D.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "host.exp.exponent",
