--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "tinder-2-rn",
-    "slug": "tinder-2-rn",
+    "name": "Valentines",
+    "slug": "valentines",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/D.png",
