--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/storage": "^14.11.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -17,12 +17,12 @@
     "expo-google-app-auth": "~9.0.0",
     "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.15",
+    "expo-updates": "~0.10.13",
     "firebase": "^9.8.2",
     "idb": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "0.64.3",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-deck-swiper": "^2.0.5",
     "react-native-iap": "^8.0.10",
@@ -33,10 +33,15 @@
     "react-native-switch-selector": "^2.2.1",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
-    "tailwind-rn": "^3.0.1"
+    "tailwind-rn": "^3.0.1",
+    "expo-splash-screen": "~0.13.5",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "name": "tinder-2-react-native-tailwind-main",
+  "version": "1.0.0"
 }
